syntax = "proto3";

package rpc;

option go_package = "./";

service FunToys {
  // Demonstrates a request response call
  rpc GetFunToy(GetFunToyReq) returns (GetFunToyResp) {}
  // Demonstrates a server streamer call
  rpc GetFunToys(GetFunToysReq) returns (stream FunToy) {}
  // Demonstrates a client streaming call
  rpc CreateFunToys(stream FunToy) returns (CreateFunToysResp) {}
  // Demonstrates a bidirectional streaming call
  rpc CreateFunToysInStream(stream FunToy) returns (stream FunToy) {}
}

message FunToy {
  uint32 id = 1;
  string name = 2;
  string description = 3;
}

message GetFunToyReq {
  uint32 id = 1;
}

message GetFunToyResp {
  FunToy product = 1;
}

message GetFunToysReq {
  string search = 1;
  uint32 limit = 2;
}

message CreateFunToysResp {
  repeated FunToy products = 1;
}
